feat: service layer and test case
